--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 # ----------------------- #
 
 url: http://italoqueiroz.github.com
-title: My Octopress Blog
-subtitle: A blogging framework for hackers.
-author: Your Name
+title: Italo Queiroz
+subtitle: "Não sei tocar pandeiro, nem jogar futebol então virei programador :("
+author: Italo Queiroz
 simple_search: http://google.com/search
-description:
+description: PHP
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
 # http://www.ruby-doc.org/core-1.9.2/Time.html#method-i-strftime
 # Additionally, %o will give you the ordinal representation of the day
-date_format: "ordinal"
+date_format: "%m/%d/%Y %R"
 
 # RSS / Email (optional) subscription links (change if using something like Feedburner)
 subscribe_rss: /atom.xml
@@ -64,7 +64,7 @@ github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: ItaloQueirozDF
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
@@ -93,7 +93,7 @@ disqus_short_name:
 disqus_show_comment_count: false
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: 
 
 # Facebook Like
-facebook_like: false
+facebook_like: true
