Post sobre Meteor e alterações no layout.

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://italoqueiroz.github.com
 title: Italo Queiroz
-subtitle: "Não sei tocar pandeiro, nem jogar futebol então virei programador :("
+subtitle: "Minha mãe pediu para eu estudar, mas preferi ser programador :D"
 author: Italo Queiroz
 simple_search: http://google.com/search
 description: PHP
@@ -49,7 +49,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
-# blog_index_asides:
+blog_index_asides: [custom/asides/about.html, asides/recent_posts.html, asides/github.html, asides/twitter.html, asides/delicious.html, asides/pinboard.html, asides/googleplus.html]
 # post_asides:
 # page_asides:
 
